work progress in note pages

--- a/app.json
+++ b/app.json
@@ -21,7 +21,8 @@
         "UIBackgroundModes": [
           "audio"
         ]
-      }
+      },
+      "bundleIdentifier": "com.anonymous.Mindfulness"
     },
     "android": {
       "userInterfaceStyle": "automatic",
