add working on notes and tasks

--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@shopify/flash-list": "1.4.0",
     "@stream-io/flat-list-mvcp": "^0.10.3",
     "@types/body-parser": "^1.19.2",
+    "@types/deep-equal": "^1.0.1",
     "@types/react-native-modern-datepicker": "^1.0.1",
+    "deep-equal": "^2.2.2",
     "expo": "~48.0.18",
     "expo-app-loading": "^2.1.1",
     "expo-av": "~13.2.1",
