finish tasks page

--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.4",
     "expo-system-ui": "~2.2.1",
-    "lottie-react-native": "5.1.4",
+    "lottie-react-native": "^6.2.0",
     "nanoid": "^4.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
