--- a/package.json
+++ b/package.json
@@ -43,7 +43,9 @@
     "react-dom": "18.2.0",
     "react-native": "0.71.8",
     "react-native-bidirectional-infinite-scroll": "^0.3.3",
+    "react-native-gifted-charts": "^1.3.7",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-modern-datepicker": "^1.0.0-beta.91",
     "react-native-music-control": "^1.4.1",
     "react-native-reanimated": "~2.14.4",
@@ -55,7 +57,8 @@
     "react-native-web": "~0.18.10",
     "react-redux": "^8.1.2",
     "redux-persist": "^6.0.0",
-    "styled-components": "^6.0.2"
+    "styled-components": "^6.0.2",
+    "victory-native": "^36.6.11"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
