--- a/Admin/package.json
+++ b/Admin/package.json
@@ -15,12 +15,14 @@
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.47.0",
     "react-imask": "^7.1.3",
     "react-lottie-player": "^1.5.5",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.16.0",
     "react-textarea-autosize": "^8.5.3",
+    "react-toastify": "^9.1.3",
     "styled-components": "^6.0.8",
     "yup": "^1.3.2"
   },
