--- a/Admin/package.json
+++ b/Admin/package.json
@@ -12,8 +12,11 @@
   "dependencies": {
     "@hookform/resolvers": "^3.3.1",
     "@reduxjs/toolkit": "^1.9.7",
+    "@types/react-beautiful-dnd": "^13.1.5",
+    "framer-motion": "^10.16.4",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.47.0",
