--- a/Admin/package.json
+++ b/Admin/package.json
@@ -10,10 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hello-pangea/dnd": "^16.3.0",
     "@hookform/resolvers": "^3.3.1",
     "@reduxjs/toolkit": "^1.9.7",
     "@types/react-beautiful-dnd": "^13.1.5",
     "framer-motion": "^10.16.4",
+    "history": "^5.3.0",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
