--- a/Admin/package.json
+++ b/Admin/package.json
@@ -13,21 +13,20 @@
     "@hello-pangea/dnd": "^16.3.0",
     "@hookform/resolvers": "^3.3.1",
     "@reduxjs/toolkit": "^1.9.7",
-    "@types/react-beautiful-dnd": "^13.1.5",
-    "framer-motion": "^10.16.4",
+    "echarts": "^5.4.3",
+    "echarts-for-react": "^3.0.2",
     "history": "^5.3.0",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
-    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.47.0",
-    "react-imask": "^7.1.3",
     "react-lottie-player": "^1.5.5",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.16.0",
     "react-textarea-autosize": "^8.5.3",
     "react-toastify": "^9.1.3",
+    "socket.io-client": "^4.7.2",
     "styled-components": "^6.0.8",
     "yup": "^1.3.2"
   },
