--- a/Backend/package.json
+++ b/Backend/package.json
@@ -20,19 +20,22 @@
     "bcryptjs": "^2.4.3",
     "celebrate": "^15.0.1",
     "cookie-parser": "^1.4.6",
-    "crypto": "^1.0.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-rate-limit": "^6.11.2",
     "express-winston": "^4.2.0",
     "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.2",
-    "method-override": "^3.0.0",
     "mongoose": "^7.5.3",
     "multer": "1.4.2",
     "multer-gridfs-storage": "^5.0.2",
+    "socket.io": "^4.7.2",
+    "socket.io-client": "^4.7.2",
     "uuid": "^9.0.1",
     "validator": "^13.11.0",
-    "winston": "^3.10.0"
+    "winston": "^3.10.0",
+    "winston-mongodb": "^5.1.1",
+    "winston-socket.io": "^1.1.0",
+    "winston-transport": "^4.6.0"
   }
 }
