--- a/Backend/package.json
+++ b/Backend/package.json
@@ -22,6 +22,7 @@
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-form-data": "^2.0.22",
     "express-rate-limit": "^6.11.2",
     "express-winston": "^4.2.0",
     "helmet": "^7.0.0",
