--- a/Backend/package.json
+++ b/Backend/package.json
@@ -30,6 +30,7 @@
     "mongoose": "^7.5.3",
     "multer": "1.4.2",
     "multer-gridfs-storage": "^5.0.2",
+    "nodemailer": "^6.9.7",
     "socket.io": "^4.7.2",
     "socket.io-client": "^4.7.2",
     "uuid": "^9.0.1",
