--- a/App/eas.json
+++ b/App/eas.json
@@ -11,6 +11,9 @@
       }
     },
     "preview": {
+      "android": {
+        "buildType": "apk"
+      },
       "distribution": "internal"
     },
     "production": {}
