--- a/App/package.json
+++ b/App/package.json
@@ -23,9 +23,11 @@
     "expo-document-picker": "~11.2.2",
     "expo-file-system": "~15.2.2",
     "expo-font": "~11.1.1",
+    "expo-navigation-bar": "~2.1.1",
     "expo-sharing": "~11.2.2",
     "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.4",
+    "expo-system-ui": "~2.2.1",
     "lottie-react-native": "^6.2.0",
     "react": "18.2.0",
     "react-native": "0.71.8",
@@ -34,7 +36,7 @@
     "react-native-screens": "~3.20.0",
     "react-native-svg": "13.4.0",
     "react-native-toast-notifications": "^3.4.0",
-    "react-native-track-player": "3.2.0",
+    "react-native-track-player": "4.0.1",
     "react-redux": "^8.1.2",
     "redux-persist": "^6.0.0",
     "styled-components": "^6.0.2"
