--- a/App/package.json
+++ b/App/package.json
@@ -17,7 +17,7 @@
     "@react-navigation/native-stack": "^6.9.13",
     "@reduxjs/toolkit": "^1.9.5",
     "deep-equal": "^2.2.2",
-    "expo": "~48.0.18",
+    "expo": "~48.0.21",
     "expo-av": "~13.2.1",
     "expo-dev-client": "~2.2.1",
     "expo-document-picker": "~11.2.2",
@@ -30,10 +30,11 @@
     "expo-system-ui": "~2.2.1",
     "lottie-react-native": "^6.2.0",
     "react": "18.2.0",
-    "react-native": "0.71.8",
+    "react-native": "0.71.14",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
+    "react-native-shadow-2": "^7.0.8",
     "react-native-svg": "13.4.0",
     "react-native-toast-notifications": "^3.4.0",
     "react-native-track-player": "4.0.1",
