--- a/App/package.json
+++ b/App/package.json
@@ -25,12 +25,12 @@
     "expo-font": "~11.1.1",
     "expo-navigation-bar": "~2.1.1",
     "expo-sharing": "~11.2.2",
-    "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.4",
     "expo-system-ui": "~2.2.1",
     "lottie-react-native": "^6.2.0",
     "react": "18.2.0",
     "react-native": "0.71.14",
+    "react-native-bootsplash": "^5.1.3",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
